--- a/currency/config.yml
+++ b/currency/config.yml
@@ -1,20 +1,20 @@
 user:
   #username 学号或者工号
-  username: '161105024'
+  username: "031802134"
   #tellphone 电话号码
-  tellphone: '15xxxxxxxx8'
+  tellphone: "13290989618"
   #address 地址，定位信息
-  address: 中国xx省xx市xx县xx路
+  address: 福州市闽侯县学府南路与建平路交叉路口西侧
   #email 接受通知消息的邮箱
-  email: 461009747@qq.com
+  email: yanghong502@gmail.com
   #school 学校全称
   school: 福州大学
   #lon 当前位置经度
-  lon: '119.191475'
+  lon: "119.198401"
   #lat 当前位置纬度
-  lat: '26.058264'
+  lat: "26.056799"
   #abnormalReason 反馈信息，不需要可不填
-  abnormalReason: 在家
+  abnormalReason:
   #photo 签到照片，不需要可不填
   photo:
 #今日校园相关配置
@@ -23,8 +23,11 @@ cpdaily:
   defaults:
     #附加信息组默认选项配置，按顺序，可留空
     - default:
-        title: 晚检体温(必填)
+        title: 午检体温 (必填)
         value: 小于37.3度
+    # - default:
+    #     title: 晚检体温(必填)
+    #     value: 小于37.3度
     - default:
         title: 是否有发热、咳嗽、乏力、呼吸困难等疑似症状(必填)
         value: 否
